--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    </head>
    <body>
     <h1> Hello World!!! </h1>
+    <p><img src="C:\Users\User\Pictures\49627628_2282151655407989_8799095216780527490_n.jpg" alt="КотЕ"></p>
    </body>
     </html>
     
